--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root" style="height:100%"></div>
 
     <script src="<%= htmlWebpackPlugin.options.reactPath %>/umd/react.<%= htmlWebpackPlugin.options.react %>.js" crossorigin></script>
     <script src="<%= htmlWebpackPlugin.options.reactDomPath %>/umd/react-dom.<%= htmlWebpackPlugin.options.react %>.js" crossorigin></script>
