--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <script src="<%= htmlWebpackPlugin.options.reactDomPath %>/umd/react-dom.<%= htmlWebpackPlugin.options.react %>.js" crossorigin></script>
 
     <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.app.entry %>"></script>
+    <script type="text/javascript" src="/src/fabrichelper.js"></script>
 
 </body>
 
